--- a/index.html
+++ b/index.html
@@ -1,22 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="/style.css" />
     <title>Мобильное меню</title>
-</head>
-<body>
+  </head>
+  <body>
+    <div id="menu">
+      <button class="hamburger hamburger-line">
+        <span>My</span>
+        <span>Hamburger</span>
+        <span>Menu</span>
+      </button>
+    </div>
 
-<nav class="mobile-menu">
-  <ul>
-    <li><a href="#">Главная</a></li>
-    <li><a href="#">О нас</a></li>
-    <li><a href="#">Услуги</a></li>
-    <li><a href="#">Контакты</a></li>
-  </ul>
-</nav>
+    <div class="container">
+      <main>
+        <h1>Salam</h1>
+      </main>
+    </div>
 
-</body>
+    <script>
+        document.querySelector('.hamburger').addEventListener('click', function(event) {
+    event.preventDefault();
+    if (this.classList.contains('is-active')) {
+        this.classList.remove('is-active');
+        document.querySelector('#menu').classList.remove('nav-active');
+        document.body.classList.remove('body-active');
+    } else {
+        this.classList.add('is-active');
+        document.querySelector('#menu').classList.add('nav-active');
+        document.body.classList.add('body-active');
+    }
+})
+    </script>
+  </body>
 </html>
