Uploaded Final Release

--- a/index.html
+++ b/index.html
@@ -18,23 +18,10 @@
 
     <div class="container">
       <main>
-        <h1>Salam</h1>
+        <h1>Hi!  I'm Omar !</h1>
       </main>
     </div>
 
-    <script>
-        document.querySelector('.hamburger').addEventListener('click', function(event) {
-    event.preventDefault();
-    if (this.classList.contains('is-active')) {
-        this.classList.remove('is-active');
-        document.querySelector('#menu').classList.remove('nav-active');
-        document.body.classList.remove('body-active');
-    } else {
-        this.classList.add('is-active');
-        document.querySelector('#menu').classList.add('nav-active');
-        document.body.classList.add('body-active');
-    }
-})
-    </script>
+    <script src="./index.js"></script>
   </body>
 </html>
